fix: use InputStream for JAR resources and add RedisTemplate bean for health indicator