@@ -9,7 +9,6 @@ import org.springframework.core.io.Resource;
 import org.springframework.stereotype.Service;
 
 import javax.annotation.PostConstruct;
-import java.nio.file.Files;
 import java.security.KeyFactory;
 import java.security.PrivateKey;
 import java.security.PublicKey;
@@ -137,7 +136,7 @@ public class JwtService {
     }
 
     private PrivateKey loadPrivateKey() throws Exception {
-        String key = new String(Files.readAllBytes(privateKeyResource.getFile().toPath()))
+        String key = new String(privateKeyResource.getInputStream().readAllBytes())
                 .replace("-----BEGIN PRIVATE KEY-----", "")
                 .replace("-----END PRIVATE KEY-----", "")
                 .replaceAll("\\s", "");
@@ -149,7 +148,7 @@ public class JwtService {
     }
 
     private PublicKey loadPublicKey() throws Exception {
-        String key = new String(Files.readAllBytes(publicKeyResource.getFile().toPath()))
+        String key = new String(publicKeyResource.getInputStream().readAllBytes())
                 .replace("-----BEGIN PUBLIC KEY-----", "")
                 .replace("-----END PUBLIC KEY-----", "")
                 .replaceAll("\\s", "");
